<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/hint_input"
        android:maxLines="5" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_input"
        android:gravity="center"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/sp_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/prompt" />

        <Button
            android:id="@+id/bt_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/on_click"
            android:text="@string/translate" />

        <Spinner
            android:id="@+id/sp_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/prompt" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_translated"
        android:maxLines="5" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_translation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/rights"/>

</RelativeLayout>